<resources>
    <string name="app_name">ClimbingApp</string>
    <string name="overall">Overall</string>
    <string name="statistics">Statistics</string>
    <string name="boulders_attempted">Boulders attempted</string>
    <string name="boulders_sent">Boulders sent</string>
    <string name="boulders_failed">Boulders failed</string>
    <string name="zero">0</string>
    <string name="zero_percent">0%</string>
    <string name="classified_as_fast">Classified as fast</string>
    <string name="classified_as_slow">Classified as slow</string>
    <string name="attempts">Attempts</string>
    <string name="unclassified">Unclassified</string>
    <string name="sent">Sent</string>
    <string name="failed">Failed</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="black">Black</string>
    <string name="stop">Stop</string>
    <string name="start_prediction">Start prediction</string>
    <string name="start">Start session</string>
    <string name="press_start_hint">Press Start to start the session.</string>
    <string name="select_model_hint">Model selection:</string>
    <string name="files">Files</string>
    <string name="upload">Upload</string>
    <string name="grade">By grade</string>
    <string name="whites">Whites</string>
    <string name="blues">Blues</string>
    <string name="yellows">Yellows</string>
    <string name="greens">Greens</string>
    <string name="reds">Reds</string>
    <string name="blacks">Blacks</string>
    <string name="classify">Classify data</string>
    <string name="flashes">Flashes</string>
    <string name="average">Average attempts</string>
    <string name="success_rate">Success rate</string>
</resources>